objects/vlocity_ins__NonHeldPolicy__c.object
<CustomObject>
    <description>Policies, annuities or other financial products held by carriers or agencies other than the company using Vlocity Insurance. Use to round out the full financial picture of the client or prospect and to enable follow-up to try to sell a replacement product. The Non-Held Policy object is a master-detail child of Account and is therefore only visible to users who have access to the parent Account.</description>
    <fields>
        <fullName>vlocity_ins__AccountId__c</fullName>
        <description>The account that holds this non-held policy.</description>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Non Held Policies</relationshipLabel>
        <relationshipName>NonHeldPolicies1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AgencyBrokerageId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The agency or brokerage that sold this non-held policy.</description>
        <label>Agency / Brokerage</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>AgencyBrokerage</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Non Held Policies (Agency / Brokerage)</relationshipLabel>
        <relationshipName>Non_Held_Policies1_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CarrierId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The carrier or writing company that offers and/or underwrites the non-held policy.</description>
        <label>Carrier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Carrier</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Non Held Policies (Insurer)</relationshipLabel>
        <relationshipName>Non_Held_Policies_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ExpirationDate__c</fullName>
        <description>The scheduled termination date for the current term of the non-held insurance policy.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InsurableItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insurable Item</label>
        <referenceTo>vlocity_ins__InsurableItem__c</referenceTo>
        <relationshipLabel>Non Held Policies</relationshipLabel>
        <relationshipName>NonheldPolicies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LOB__c</fullName>
        <description>The line of business for this non-held policy such as personal lines, commercial lines, individual life or annuity.</description>
        <label>LOB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal Lines</fullName>
                </value>
                <value>
                    <fullName>Commercial Lines</fullName>
                </value>
                <value>
                    <fullName>Individual Life</fullName>
                </value>
                <value>
                    <fullName>Annuity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Party</label>
        <referenceTo>vlocity_ins__Party__c</referenceTo>
        <relationshipLabel>Non Held Policies</relationshipLabel>
        <relationshipName>NonheldPolicies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyJurisdiction__c</fullName>
        <description>The jurisdiction which governs and authorizes this non-held policy.</description>
        <label>Policy Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyNumber__c</fullName>
        <description>A reference number for this non-held policy (if known).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyType__c</fullName>
        <description>The type of policy or financial account such as term life, auto, homeowners or variable annuity.</description>
        <label>Policy Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AD&amp;D</fullName>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Boatowners</fullName>
                </value>
                <value>
                    <fullName>Business Owners</fullName>
                </value>
                <value>
                    <fullName>Condominium</fullName>
                </value>
                <value>
                    <fullName>Crime</fullName>
                </value>
                <value>
                    <fullName>D&amp;O</fullName>
                </value>
                <value>
                    <fullName>Equity−indexed annuity</fullName>
                </value>
                <value>
                    <fullName>Fixed Annuity</fullName>
                </value>
                <value>
                    <fullName>General Liability</fullName>
                </value>
                <value>
                    <fullName>Homeowners</fullName>
                </value>
                <value>
                    <fullName>Inland Marine</fullName>
                </value>
                <value>
                    <fullName>Ocean Marine</fullName>
                </value>
                <value>
                    <fullName>Permanent Life</fullName>
                </value>
                <value>
                    <fullName>Pers/Scheduled Property</fullName>
                </value>
                <value>
                    <fullName>Property</fullName>
                </value>
                <value>
                    <fullName>Renters</fullName>
                </value>
                <value>
                    <fullName>Term Life</fullName>
                </value>
                <value>
                    <fullName>Umbrella Liability</fullName>
                </value>
                <value>
                    <fullName>Unit Linked Life</fullName>
                </value>
                <value>
                    <fullName>Universal Life</fullName>
                </value>
                <value>
                    <fullName>Universal Variable Life</fullName>
                </value>
                <value>
                    <fullName>Variable Annuity</fullName>
                </value>
                <value>
                    <fullName>Variable Life</fullName>
                </value>
                <value>
                    <fullName>Workers Compensation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary contact for follow-up on this non-held policy or financial account.</description>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Non Held Policies (Primary Contact)</relationshipLabel>
        <relationshipName>Non_Held_Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Non Held Policy</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Non Held Policies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>